# Animal-Farm

sub/: Animal.cpp  Animal.h  CMakeLists.txt  Chicken.cpp  Chicken.h  ChickenFarm.cpp  ChickenFarm.h  Cow.cpp  Cow.h  CowFarm.cpp  CowFarm.h  Farm.cpp  Farm.h  Market.cpp  Market.h  Sheep.cpp  Sheep.h  SheepFarm.cpp  SheepFarm.h  error.h  farmMarket.cpp  makefile
